# x/currency/types/keys.go
@@ -1,0 +1,15 @@
+package types
+
+const (
+	// module name
+	ModuleName = "currency"
+
+	// StoreKey to be used when creating the KVStore
+	StoreKey = ModuleName
+
+	// RouterKey to be used in router
+	RouterKey = ModuleName
+
+	// QuerierRoute is the query router key
+	QuerierRoute = ModuleName
+)
